Fix layout-padding on mobile screen

--- a/src/css/app.styl
+++ b/src/css/app.styl
@@ -58,4 +58,5 @@ div h4:only-child
   height: 100% !important
 
 .layout-padding
-  padding: 2rem 3rem 1rem;
+  @media(min-width: 1200px)
+    padding: 2rem 3rem 1rem;
